[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 99

[tool.poetry]
authors = [
  "Denis Rosset <physics@denisrosset.com>",
]
description = "Tybles: simple schemas for Pandas dataframes"
license = "BSD-3-Clause"
name = "tybles"
readme = "README.md"
repository = "https://github.com/denisrosset/tybles.git"
version = "0.2.0"

[tool.poetry.dependencies]
beartype = "^0.10.4"
numpy = "^1.22.3"
pandas = "^1.2.4"
python = "^3.8,<3.11"

myst-nb = {version = "^0.13.2", optional = true}
sphinx = {version = "4.3.2", optional = true}
sphinx-autodoc-typehints = {version = "^1.17.0", optional = true}
sphinx-book-theme = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
docs = [
  "myst-nb",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
commitizen = "^2.21.2"
doc8 = "^0.10.1"
esbonio = "^0.10.2"
isort = "^5.10.1"
mypy = "^0.941"
pandas-stubs = "^1.2.0.43"
pylint = "^2.13.5"
pytest = "^7.0.1"
rstcheck = "^3.3.1"

[mypy]
plugins = ["numpy.typing.mypy_plugin"]
python_version = "3.8"

warn_return_any = true
warn_unused_configs = true

# super strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = [
  "--tb=short",
]

[tool.pylint.BASIC]
argument-rgx = "[a-z_][a-z0-9_]?{1,30}$"
class-attribute-rgx = "[a-z_][a-z0-9_]?{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]?{1,30}$"

[tool.pylint.messages_control]
disable = [
  "assignment-from-none", # this is caught by mypy and has false positives
  "no-value-for-parameter", # this is caught by mypy and has false positives
  "unused-argument", # happens quite often in OOP hierarchies
]
